Fix broken layout for Media table

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,11 @@ small {
   font-size: inherit;
 }
 
+th,
+td {
+  vertical-align: baseline;
+}
+
 :where(h1, h2, h3, h4, h5, h6) > code {
   font-family: monospace;
 }
